# test-github-actions

./: create_repo.py  main.py  my_func.py  pyproject.toml  test.py
.github/workflows/: automated_test.yml  create_repo.yml  test.yml
