[tool.poetry]
name = "test-github-actions"
version = "0.1.0"
description = ""
authors = ["chickendining <sumethsiripakorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
